--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>service2</module>
         <module>service3</module>
         <module>service4</module>
+        <module>gatling</module>
     </modules>
     <dependencies>
         <dependency>
