--- a/service2/src/main/resources/application.properties
+++ b/service2/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 server.port = 8082
 spring.application.name = service2
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/db
+spring.datasource.username=user
+spring.datasource.password=pass
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=create
