--- a/common/src/main/resources/application.properties
+++ b/common/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port = 8081
-spring.application.name = service1
 # ~~~~ Actuator ~~~~
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.enabled=true
+
+#TODO make this work for all projects
