--- a/service2/src/main/resources/application.properties
+++ b/service2/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.datasource.password=pass
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=create
+
+# ~~~~ Actuator ~~~~
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
