added barmans + starvation on db connection pool + on http conn pool

--- a/service1/src/main/resources/application.properties
+++ b/service1/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.application.name = service1
 # ~~~~ Actuator ~~~~
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.enabled=true
+
+bar.pool.size=400
+
