--- a/service2/pom.xml
+++ b/service2/pom.xml
@@ -11,6 +11,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.14</version>
+		</dependency>
+		<dependency>
 			<groupId>victor.training</groupId>
 			<artifactId>common</artifactId>
 		</dependency>
