--- a/service2/src/main/resources/application.properties
+++ b/service2/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.jpa.hibernate.ddl-auto=create
 # ~~~~ Actuator ~~~~
 management.endpoints.web.exposure.include=*
 management.endpoint.prometheus.enabled=true
+
+server.tomcat.mbeanregistry.enabled=true
+management.metrics.tags.region=ro
+management.metrics.tags.application=service2
