--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,6 +12,11 @@ services:
       - "5672:5672" #main port
       - "15672:15672" #admin port
 
+  redis:
+    image: redis:latest
+    ports:
+      - 6379:6379
+
   postgres:
     image: postgres:11
     environment:
