the same I promise

--- a/service2/src/main/resources/application.properties
+++ b/service2/src/main/resources/application.properties
@@ -15,3 +15,5 @@ management.endpoint.prometheus.enabled=true
 server.tomcat.mbeanregistry.enabled=true
 management.metrics.tags.region=ro
 management.metrics.tags.application=service2
+
+spring.datasource.hikari.maximum-pool-size=60
